fix(pages/faq): icon, texte și whitespace

--- a/src/pages/faq/faq.scss
+++ b/src/pages/faq/faq.scss
@@ -2,31 +2,22 @@ page-faq {
   ion-list {
     ion-item {
       background-color: transparent;
-      padding-left: 0;
-      position: relative;
+      padding-left: 0 !important;
     }
     ion-label {
       h2 {
-        width: 85%;
-        font-size: 1em;
+        margin: 0 !important;
       }
       div {
         text-transform: none;
-        font-size: 0.8em;
         padding: 1em 0;
         white-space: normal;
+        line-height: 1.7;
       }
     }
-    ion-icon {
-      font-size: 1.8rem;
-      padding: 0;
-      text-align: center;
-      position: absolute;
-      right: 10px;
-      top: 3px;
-      &:before {
-        font-weight: bold;
-      }
+    ion-icon[item-right] {
+      align-self: flex-start;
+      margin-right: 0 !important;
     }
   }
 }
